--- a/revise.html
+++ b/revise.html
@@ -44,6 +44,7 @@
         width:400px;
         height: 200px;
         padding:70px 35px 0 30px;
+        margin: 0 auto;
      }
     </style>
 </head>
