--- a/position.html
+++ b/position.html
@@ -56,11 +56,13 @@
 5)height,width;
 6)position;
 7)alignment;
-8)
+8) hover;
 
 
 
 <!-- ===task====== -->
 1)w3 school theke CSS form ta dekba
 2)CSS box model own note 
+
+3) hero section, nav baR with logo, login form with display-flex.
 <!-- ===task====== -->
